# video-pid

./: .gitignore  CITATION.cff  CONTRIBUTING.md  HF_MODEL_CARD.md  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
docs/: ARCHITECTURE.md  METHOD.md  ROADMAP.md  TRAINING.md
research/: AsymFlow-paper.html  AsymFlow-paper.txt  asymflow_research_summary.md  nvidia_pid_arch_findings.md  nvidia_pid_ported.md  pid_paper.txt  pixel_space_video_research.md  plastic-video-vae-research.md  video-pid-architecture.md  video-pid-recipe.md  video-pid-training-recipe.md  video_editing_models_research.md  wan21_architecture.md  wan21_hook_design.md
scripts/: eval_pid.py  generate_baseline.py  generate_with_pid.py  train_pid.py
tests/: test_smoke.py
video_pid/: __init__.py  data.py  losses.py  model.py  pipeline.py  sampler.py  trainer.py
