[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-pid"
version = "0.0.1"
description = "Pixel-space diffusion decoder for Wan 2.1 video generation. Fixes the plastic/waxy look of VAE-decoded video."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "madxmoron" }
]
requires-python = ">=3.10"
keywords = ["diffusion", "video", "vae", "decoder", "wan", "pid", "pixel-space"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.4.0",
    "diffusers>=0.39.0",
    "transformers>=4.50.0",
    "accelerate>=1.0.0",
    "safetensors>=0.4.0",
    "einops>=0.7.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "lpips>=0.1.4",
    "einops",
    "av>=11.0.0",
]

[project.optional-dependencies]
train = [
    "bitsandbytes>=0.43.0",
    "wandb>=0.17.0",
]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.0.0",
    "black>=24.0.0",
]

[project.urls]
Homepage = "https://github.com/madxmoron/video-pid"
Repository = "https://github.com/madxmoron/video-pid"
Issues = "https://github.com/madxmoron/video-pid/issues"
HuggingFace = "https://huggingface.co/madxmoron/video-pid"

[tool.setuptools.packages.find]
include = ["video_pid*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501", "B008"]

[tool.black]
line-length = 100
target-version = ["py310"]
